# pure_pursuit_path_tracker

./: CMakeLists.txt  README.md  package.xml
include/: pure_pursuit.hpp
racelines/: column_dropper.py  plot_tracks.py  rotation.py  track_generate.py  track_manipulator.py
racelines/berlin_2018/: berlin_2018_yaw.csv
racelines/modena/: modena_2019_yaw.csv
racelines/rounded_rectangle/: RR_path_yaw.csv
racelines/velocity_tracks/: circular_path.csv  e7_floor5.csv  handling_track.csv  modena2019.csv  modena2019_adjusted.csv  straight_path.csv
src/: pure_pursuit.cpp
